APIs/googleapis.com/displayvideo/v2/javascript-client/docs/LineItem.md
# DisplayVideo360Api.LineItem

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**advertiserId** | **String** | Output only. The unique ID of the advertiser the line item belongs to. | [optional] [readonly] 
**bidStrategy** | [**BiddingStrategy**](BiddingStrategy.md) |  | [optional] 
**budget** | [**LineItemBudget**](LineItemBudget.md) |  | [optional] 
**campaignId** | **String** | Output only. The unique ID of the campaign that the line item belongs to. | [optional] [readonly] 
**conversionCounting** | [**ConversionCountingConfig**](ConversionCountingConfig.md) |  | [optional] 
**creativeIds** | **[String]** | The IDs of the creatives associated with the line item. | [optional] 
**displayName** | **String** | Required. The display name of the line item. Must be UTF-8 encoded with a maximum size of 240 bytes. | [optional] 
**entityStatus** | **String** | Required. Controls whether or not the line item can spend its budget and bid on inventory. * For CreateLineItem method, only &#x60;ENTITY_STATUS_DRAFT&#x60; is allowed. To activate a line item, use UpdateLineItem method and update the status to &#x60;ENTITY_STATUS_ACTIVE&#x60; after creation. * A line item cannot be changed back to &#x60;ENTITY_STATUS_DRAFT&#x60; status from any other status. * If the line item&#39;s parent insertion order is not active, the line item can&#39;t spend its budget even if its own status is &#x60;ENTITY_STATUS_ACTIVE&#x60;. | [optional] 
**excludeNewExchanges** | **Boolean** | Whether to exclude new exchanges from automatically being targeted by the line item. This field is false by default. | [optional] 
**flight** | [**LineItemFlight**](LineItemFlight.md) |  | [optional] 
**frequencyCap** | [**FrequencyCap**](FrequencyCap.md) |  | [optional] 
**insertionOrderId** | **String** | Required. Immutable. The unique ID of the insertion order that the line item belongs to. | [optional] 
**integrationDetails** | [**IntegrationDetails**](IntegrationDetails.md) |  | [optional] 
**lineItemId** | **String** | Output only. The unique ID of the line item. Assigned by the system. | [optional] [readonly] 
**lineItemType** | **String** | Required. Immutable. The type of the line item. | [optional] 
**mobileApp** | [**MobileApp**](MobileApp.md) |  | [optional] 
**name** | **String** | Output only. The resource name of the line item. | [optional] [readonly] 
**pacing** | [**Pacing**](Pacing.md) |  | [optional] 
**partnerCosts** | [**[PartnerCost]**](PartnerCost.md) | The partner costs associated with the line item. If absent or empty in CreateLineItem method, the newly created line item will inherit partner costs from its parent insertion order. | [optional] 
**partnerRevenueModel** | [**PartnerRevenueModel**](PartnerRevenueModel.md) |  | [optional] 
**reservationType** | **String** | Output only. The reservation type of the line item. | [optional] [readonly] 
**targetingExpansion** | [**TargetingExpansionConfig**](TargetingExpansionConfig.md) |  | [optional] 
**updateTime** | **String** | Output only. The timestamp when the line item was last updated. Assigned by the system. | [optional] [readonly] 
**warningMessages** | **[String]** | Output only. The warning messages generated by the line item. These warnings do not block saving the line item, but some may block the line item from running. | [optional] [readonly] 
**youtubeAndPartnersSettings** | [**YoutubeAndPartnersSettings**](YoutubeAndPartnersSettings.md) |  | [optional] 



## Enum: EntityStatusEnum


* `UNSPECIFIED` (value: `"ENTITY_STATUS_UNSPECIFIED"`)

* `ACTIVE` (value: `"ENTITY_STATUS_ACTIVE"`)

* `ARCHIVED` (value: `"ENTITY_STATUS_ARCHIVED"`)

* `DRAFT` (value: `"ENTITY_STATUS_DRAFT"`)

* `PAUSED` (value: `"ENTITY_STATUS_PAUSED"`)

* `SCHEDULED_FOR_DELETION` (value: `"ENTITY_STATUS_SCHEDULED_FOR_DELETION"`)





## Enum: LineItemTypeEnum


* `UNSPECIFIED` (value: `"LINE_ITEM_TYPE_UNSPECIFIED"`)

* `DISPLAY_DEFAULT` (value: `"LINE_ITEM_TYPE_DISPLAY_DEFAULT"`)

* `DISPLAY_MOBILE_APP_INSTALL` (value: `"LINE_ITEM_TYPE_DISPLAY_MOBILE_APP_INSTALL"`)

* `VIDEO_DEFAULT` (value: `"LINE_ITEM_TYPE_VIDEO_DEFAULT"`)

* `VIDEO_MOBILE_APP_INSTALL` (value: `"LINE_ITEM_TYPE_VIDEO_MOBILE_APP_INSTALL"`)

* `DISPLAY_MOBILE_APP_INVENTORY` (value: `"LINE_ITEM_TYPE_DISPLAY_MOBILE_APP_INVENTORY"`)

* `VIDEO_MOBILE_APP_INVENTORY` (value: `"LINE_ITEM_TYPE_VIDEO_MOBILE_APP_INVENTORY"`)

* `AUDIO_DEFAULT` (value: `"LINE_ITEM_TYPE_AUDIO_DEFAULT"`)

* `VIDEO_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_VIDEO_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_ACTION` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_ACTION"`)

* `YOUTUBE_AND_PARTNERS_NON_SKIPPABLE` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_NON_SKIPPABLE"`)

* `YOUTUBE_AND_PARTNERS_VIDEO_SEQUENCE` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_VIDEO_SEQUENCE"`)

* `YOUTUBE_AND_PARTNERS_AUDIO` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_AUDIO"`)

* `YOUTUBE_AND_PARTNERS_REACH` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_REACH"`)

* `YOUTUBE_AND_PARTNERS_SIMPLE` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_SIMPLE"`)

* `YOUTUBE_AND_PARTNERS_NON_SKIPPABLE_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_NON_SKIPPABLE_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_REACH_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_REACH_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_SIMPLE_OVER_THE_TOP` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_SIMPLE_OVER_THE_TOP"`)

* `YOUTUBE_AND_PARTNERS_TARGET_FREQUENCY` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_TARGET_FREQUENCY"`)

* `YOUTUBE_AND_PARTNERS_VIEW` (value: `"LINE_ITEM_TYPE_YOUTUBE_AND_PARTNERS_VIEW"`)

* `DISPLAY_OUT_OF_HOME` (value: `"LINE_ITEM_TYPE_DISPLAY_OUT_OF_HOME"`)

* `VIDEO_OUT_OF_HOME` (value: `"LINE_ITEM_TYPE_VIDEO_OUT_OF_HOME"`)





## Enum: ReservationTypeEnum


* `UNSPECIFIED` (value: `"RESERVATION_TYPE_UNSPECIFIED"`)

* `NOT_GUARANTEED` (value: `"RESERVATION_TYPE_NOT_GUARANTEED"`)

* `PROGRAMMATIC_GUARANTEED` (value: `"RESERVATION_TYPE_PROGRAMMATIC_GUARANTEED"`)

* `TAG_GUARANTEED` (value: `"RESERVATION_TYPE_TAG_GUARANTEED"`)

* `PETRA_VIRAL` (value: `"RESERVATION_TYPE_PETRA_VIRAL"`)

* `INSTANT_RESERVE` (value: `"RESERVATION_TYPE_INSTANT_RESERVE"`)





## Enum: [WarningMessagesEnum]


* `LINE_ITEM_WARNING_MESSAGE_UNSPECIFIED` (value: `"LINE_ITEM_WARNING_MESSAGE_UNSPECIFIED"`)

* `INVALID_FLIGHT_DATES` (value: `"INVALID_FLIGHT_DATES"`)

* `EXPIRED` (value: `"EXPIRED"`)

* `PENDING_FLIGHT` (value: `"PENDING_FLIGHT"`)

* `ALL_PARTNER_ENABLED_EXCHANGES_NEGATIVELY_TARGETED` (value: `"ALL_PARTNER_ENABLED_EXCHANGES_NEGATIVELY_TARGETED"`)

* `INVALID_INVENTORY_SOURCE` (value: `"INVALID_INVENTORY_SOURCE"`)

* `APP_INVENTORY_INVALID_SITE_TARGETING` (value: `"APP_INVENTORY_INVALID_SITE_TARGETING"`)

* `APP_INVENTORY_INVALID_AUDIENCE_LISTS` (value: `"APP_INVENTORY_INVALID_AUDIENCE_LISTS"`)

* `NO_VALID_CREATIVE` (value: `"NO_VALID_CREATIVE"`)

* `PARENT_INSERTION_ORDER_PAUSED` (value: `"PARENT_INSERTION_ORDER_PAUSED"`)

* `PARENT_INSERTION_ORDER_EXPIRED` (value: `"PARENT_INSERTION_ORDER_EXPIRED"`)

* `DEPRECATED_FIRST_PARTY_AUDIENCE_EXCLUSION` (value: `"DEPRECATED_FIRST_PARTY_AUDIENCE_EXCLUSION"`)




